Production fixes, TimeToScore THF/AHF scrapers, registered-user deep-dive pipeline, 2026 roster data